--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
     <url>https://demo.cutiechi.com</url>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <spring.version>5.0.9.RELEASE</spring.version>
     </properties>
     <dependencies>
         <dependency>
@@ -23,7 +24,7 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-webmvc</artifactId>
-            <version>5.0.9.RELEASE</version>
+            <version>${spring.version}</version>
         </dependency>
         <dependency>
             <groupId>javax.servlet</groupId>
