--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,11 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.12</version>
+        </dependency>
     </dependencies>
     <build>
         <finalName>maven-ssm-annotation-demo</finalName>
