--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,11 @@
             <artifactId>mybatis</artifactId>
             <version>3.4.6</version>
         </dependency>
+        <dependency>
+            <groupId>org.mybatis</groupId>
+            <artifactId>mybatis-spring</artifactId>
+            <version>1.3.2</version>
+        </dependency>
     </dependencies>
     <build>
         <finalName>maven-ssm-annotation-demo</finalName>
